@@ -31,6 +31,11 @@ javafx {
     mainClass = 'com.bitbucket.shemnon.jfx.sample.fullyexpressed.TheMain'
 
     packaging = 'image'
+
+
+    jvmArgs = ['-XX:+AggressiveOpts', '-XX:CompileThreshold=1']
+    systemProperties = [ 'prism.disableRegionCaching':'true' ]
+    arguments = ['1AC', '1NC', '2AC', '2NC', '1NR', '1AR', '2NR', '2AR']
 }
 
 generateDebugKey {
